--- a/TodoViewController.xib
+++ b/TodoViewController.xib
@@ -101,39 +101,6 @@
             <int key="IBUIBaselineAdjustment">1</int>
             <float key="IBUIMinimumFontSize">10</float>
           </object>
-          <object class="IBUIButton" id="976754814">
-            <reference key="NSNextResponder" ref="191373211"/>
-            <int key="NSvFlags">292</int>
-            <string key="NSFrame">{{20, 353}, {280, 37}}</string>
-            <reference key="NSSuperview" ref="191373211"/>
-            <bool key="IBUIOpaque">NO</bool>
-            <bool key="IBUIClearsContextBeforeDrawing">NO</bool>
-            <string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-            <int key="IBUIContentHorizontalAlignment">0</int>
-            <int key="IBUIContentVerticalAlignment">0</int>
-            <object class="NSFont" key="IBUIFont">
-              <string key="NSName">Helvetica-Bold</string>
-              <double key="NSSize">15</double>
-              <int key="NSfFlags">16</int>
-            </object>
-            <int key="IBUIButtonType">1</int>
-            <string key="IBUIHighlightedTitle">Update Status</string>
-            <string key="IBUIDisabledTitle">Update Status</string>
-            <string key="IBUISelectedTitle">Update Status</string>
-            <string key="IBUINormalTitle">Update Status</string>
-            <object class="NSColor" key="IBUIHighlightedTitleColor">
-              <int key="NSColorSpace">1</int>
-              <bytes key="NSRGB">MSAxIDEAA</bytes>
-            </object>
-            <object class="NSColor" key="IBUINormalTitleColor">
-              <int key="NSColorSpace">1</int>
-              <bytes key="NSRGB">MC4xOTYwNzg0MyAwLjMwOTgwMzkzIDAuNTIxNTY4NjYAA</bytes>
-            </object>
-            <object class="NSColor" key="IBUINormalTitleShadowColor">
-              <int key="NSColorSpace">3</int>
-              <bytes key="NSWhite">MAA</bytes>
-            </object>
-          </object>
           <object class="IBUILabel" id="338404575">
             <reference key="NSNextResponder" ref="191373211"/>
             <int key="NSvFlags">292</int>
@@ -204,6 +171,17 @@
               <string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
             </object>
           </object>
+          <object class="IBUISwitch" id="489313539">
+            <reference key="NSNextResponder" ref="191373211"/>
+            <int key="NSvFlags">292</int>
+            <string key="NSFrame">{{116, 88}, {94, 27}}</string>
+            <reference key="NSSuperview" ref="191373211"/>
+            <string key="NSReuseIdentifierKey">_NS:536</string>
+            <bool key="IBUIOpaque">NO</bool>
+            <string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+            <int key="IBUIContentHorizontalAlignment">0</int>
+            <int key="IBUIContentVerticalAlignment">0</int>
+          </object>
         </object>
         <string key="NSFrameSize">{320, 480}</string>
         <reference key="NSSuperview"/>
@@ -244,23 +222,6 @@
         </object>
         <object class="IBConnectionRecord">
           <object class="IBCocoaTouchEventConnection" key="connection">
-            <string key="label">updateStatus:</string>
-            <reference key="source" ref="976754814"/>
-            <reference key="destination" ref="372490531"/>
-            <int key="IBEventType">7</int>
-          </object>
-          <int key="connectionID">30</int>
-        </object>
-        <object class="IBConnectionRecord">
-          <object class="IBCocoaTouchOutletConnection" key="connection">
-            <string key="label">todoButton</string>
-            <reference key="source" ref="372490531"/>
-            <reference key="destination" ref="976754814"/>
-          </object>
-          <int key="connectionID">31</int>
-        </object>
-        <object class="IBConnectionRecord">
-          <object class="IBCocoaTouchEventConnection" key="connection">
             <string key="label">updatePriority:</string>
             <reference key="source" ref="457771076"/>
             <reference key="destination" ref="372490531"/>
@@ -285,6 +246,23 @@
           </object>
           <int key="connectionID">36</int>
         </object>
+        <object class="IBConnectionRecord">
+          <object class="IBCocoaTouchOutletConnection" key="connection">
+            <string key="label">todoStatusSwitch</string>
+            <reference key="source" ref="372490531"/>
+            <reference key="destination" ref="489313539"/>
+          </object>
+          <int key="connectionID">38</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBCocoaTouchEventConnection" key="connection">
+            <string key="label">updateStatus:</string>
+            <reference key="source" ref="489313539"/>
+            <reference key="destination" ref="372490531"/>
+            <int key="IBEventType">13</int>
+          </object>
+          <int key="connectionID">39</int>
+        </object>
       </object>
       <object class="IBMutableOrderedSet" key="objectRecords">
         <object class="NSArray" key="orderedObjects">
@@ -303,10 +281,10 @@
               <reference ref="338404575"/>
               <reference ref="967320932"/>
               <reference ref="707172694"/>
-              <reference ref="976754814"/>
               <reference ref="457771076"/>
               <reference ref="153014393"/>
               <reference ref="1044492338"/>
+              <reference ref="489313539"/>
             </object>
             <reference key="parent" ref="0"/>
           </object>
@@ -332,11 +310,6 @@
             <reference key="parent" ref="191373211"/>
           </object>
           <object class="IBObjectRecord">
-            <int key="objectID">25</int>
-            <reference key="object" ref="976754814"/>
-            <reference key="parent" ref="191373211"/>
-          </object>
-          <object class="IBObjectRecord">
             <int key="objectID">27</int>
             <reference key="object" ref="338404575"/>
             <reference key="parent" ref="191373211"/>
@@ -356,6 +329,11 @@
             <reference key="object" ref="1044492338"/>
             <reference key="parent" ref="191373211"/>
           </object>
+          <object class="IBObjectRecord">
+            <int key="objectID">37</int>
+            <reference key="object" ref="489313539"/>
+            <reference key="parent" ref="191373211"/>
+          </object>
         </object>
       </object>
       <object class="NSMutableDictionary" key="flattenedProperties">
@@ -369,11 +347,12 @@
           <string>16.IBPluginDependency</string>
           <string>18.IBPluginDependency</string>
           <string>18.IBViewBoundsToFrameTransform</string>
-          <string>25.IBPluginDependency</string>
           <string>27.IBPluginDependency</string>
           <string>28.IBPluginDependency</string>
           <string>29.IBPluginDependency</string>
           <string>34.IBPluginDependency</string>
+          <string>37.IBPluginDependency</string>
+          <string>37.IBViewBoundsToFrameTransform</string>
         </object>
         <object class="NSMutableArray" key="dict.values">
           <bool key="EncodedWithXMLCoder">YES</bool>
@@ -391,6 +370,9 @@
           <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
           <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
           <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+          <object class="NSAffineTransform">
+            <bytes key="NSTransformStruct">P4AAAL+AAABDHAAAw3YAAA</bytes>
+          </object>
         </object>
       </object>
       <object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -409,7 +391,7 @@
         </object>
       </object>
       <nil key="sourceID"/>
-      <int key="maxID">36</int>
+      <int key="maxID">39</int>
     </object>
     <object class="IBClassDescriber" key="IBDocument.Classes">
       <object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -463,6 +445,7 @@
               <string>todoButton</string>
               <string>todoPriority</string>
               <string>todoStatus</string>
+              <string>todoStatusSwitch</string>
               <string>todoText</string>
             </object>
             <object class="NSMutableArray" key="dict.values">
@@ -470,6 +453,7 @@
               <string>UIButton</string>
               <string>UISegmentedControl</string>
               <string>UILabel</string>
+              <string>UISwitch</string>
               <string>UITextField</string>
             </object>
           </object>
@@ -480,6 +464,7 @@
               <string>todoButton</string>
               <string>todoPriority</string>
               <string>todoStatus</string>
+              <string>todoStatusSwitch</string>
               <string>todoText</string>
             </object>
             <object class="NSMutableArray" key="dict.values">
@@ -495,6 +480,10 @@
               <object class="IBToOneOutletInfo">
                 <string key="name">todoStatus</string>
                 <string key="candidateClassName">UILabel</string>
+              </object>
+              <object class="IBToOneOutletInfo">
+                <string key="name">todoStatusSwitch</string>
+                <string key="candidateClassName">UISwitch</string>
               </object>
               <object class="IBToOneOutletInfo">
                 <string key="name">todoText</string>
@@ -652,6 +641,14 @@
           <object class="IBClassDescriptionSource" key="sourceIdentifier">
             <string key="majorKey">IBFrameworkSource</string>
             <string key="minorKey">UIKit.framework/Headers/UISegmentedControl.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">UISwitch</string>
+          <string key="superclassName">UIControl</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBFrameworkSource</string>
+            <string key="minorKey">UIKit.framework/Headers/UISwitch.h</string>
           </object>
         </object>
         <object class="IBPartialClassDescription">
