Changed UISwitch to UICustomSwitch.  Deleted 'Status' section.

--- a/TodoViewController.xib
+++ b/TodoViewController.xib
@@ -45,7 +45,7 @@
           <object class="IBUISegmentedControl" id="457771076">
             <reference key="NSNextResponder" ref="191373211"/>
             <int key="NSvFlags">292</int>
-            <string key="NSFrame">{{20, 285}, {286, 44}}</string>
+            <string key="NSFrame">{{20, 161}, {286, 44}}</string>
             <reference key="NSSuperview" ref="191373211"/>
             <bool key="IBUIOpaque">NO</bool>
             <bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -83,50 +83,20 @@
               <reference ref="4"/>
             </object>
           </object>
-          <object class="IBUILabel" id="153014393">
-            <reference key="NSNextResponder" ref="191373211"/>
-            <int key="NSvFlags">292</int>
-            <string key="NSFrame">{{68, 221}, {238, 21}}</string>
-            <reference key="NSSuperview" ref="191373211"/>
-            <bool key="IBUIOpaque">NO</bool>
-            <bool key="IBUIClipsSubviews">YES</bool>
-            <bool key="IBUIUserInteractionEnabled">NO</bool>
-            <string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-            <string key="IBUIText">In Progress</string>
-            <object class="NSColor" key="IBUITextColor" id="554936524">
-              <int key="NSColorSpace">1</int>
-              <bytes key="NSRGB">MCAwIDAAA</bytes>
-            </object>
-            <nil key="IBUIHighlightedColor"/>
-            <int key="IBUIBaselineAdjustment">1</int>
-            <float key="IBUIMinimumFontSize">10</float>
-          </object>
           <object class="IBUILabel" id="338404575">
             <reference key="NSNextResponder" ref="191373211"/>
             <int key="NSvFlags">292</int>
-            <string key="NSFrame">{{20, 251}, {74, 26}}</string>
+            <string key="NSFrame">{{20, 127}, {74, 26}}</string>
             <reference key="NSSuperview" ref="191373211"/>
             <bool key="IBUIOpaque">NO</bool>
             <bool key="IBUIClipsSubviews">YES</bool>
             <bool key="IBUIUserInteractionEnabled">NO</bool>
             <string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
             <string key="IBUIText">Priority: </string>
-            <reference key="IBUITextColor" ref="554936524"/>
-            <nil key="IBUIHighlightedColor"/>
-            <int key="IBUIBaselineAdjustment">1</int>
-            <float key="IBUIMinimumFontSize">10</float>
-          </object>
-          <object class="IBUILabel" id="707172694">
-            <reference key="NSNextResponder" ref="191373211"/>
-            <int key="NSvFlags">292</int>
-            <string key="NSFrame">{{20, 192}, {74, 21}}</string>
-            <reference key="NSSuperview" ref="191373211"/>
-            <bool key="IBUIOpaque">NO</bool>
-            <bool key="IBUIClipsSubviews">YES</bool>
-            <bool key="IBUIUserInteractionEnabled">NO</bool>
-            <string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-            <string key="IBUIText">Status: </string>
-            <reference key="IBUITextColor" ref="554936524"/>
+            <object class="NSColor" key="IBUITextColor" id="554936524">
+              <int key="NSColorSpace">1</int>
+              <bytes key="NSRGB">MCAwIDAAA</bytes>
+            </object>
             <nil key="IBUIHighlightedColor"/>
             <int key="IBUIBaselineAdjustment">1</int>
             <float key="IBUIMinimumFontSize">10</float>
@@ -171,17 +141,6 @@
               <string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
             </object>
           </object>
-          <object class="IBUISwitch" id="489313539">
-            <reference key="NSNextResponder" ref="191373211"/>
-            <int key="NSvFlags">292</int>
-            <string key="NSFrame">{{116, 88}, {94, 27}}</string>
-            <reference key="NSSuperview" ref="191373211"/>
-            <string key="NSReuseIdentifierKey">_NS:536</string>
-            <bool key="IBUIOpaque">NO</bool>
-            <string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-            <int key="IBUIContentHorizontalAlignment">0</int>
-            <int key="IBUIContentVerticalAlignment">0</int>
-          </object>
         </object>
         <string key="NSFrameSize">{320, 480}</string>
         <reference key="NSSuperview"/>
@@ -213,14 +172,6 @@
           <int key="connectionID">22</int>
         </object>
         <object class="IBConnectionRecord">
-          <object class="IBCocoaTouchOutletConnection" key="connection">
-            <string key="label">todoStatus</string>
-            <reference key="source" ref="372490531"/>
-            <reference key="destination" ref="153014393"/>
-          </object>
-          <int key="connectionID">23</int>
-        </object>
-        <object class="IBConnectionRecord">
           <object class="IBCocoaTouchEventConnection" key="connection">
             <string key="label">updatePriority:</string>
             <reference key="source" ref="457771076"/>
@@ -246,23 +197,6 @@
           </object>
           <int key="connectionID">36</int>
         </object>
-        <object class="IBConnectionRecord">
-          <object class="IBCocoaTouchOutletConnection" key="connection">
-            <string key="label">todoStatusSwitch</string>
-            <reference key="source" ref="372490531"/>
-            <reference key="destination" ref="489313539"/>
-          </object>
-          <int key="connectionID">38</int>
-        </object>
-        <object class="IBConnectionRecord">
-          <object class="IBCocoaTouchEventConnection" key="connection">
-            <string key="label">updateStatus:</string>
-            <reference key="source" ref="489313539"/>
-            <reference key="destination" ref="372490531"/>
-            <int key="IBEventType">13</int>
-          </object>
-          <int key="connectionID">39</int>
-        </object>
       </object>
       <object class="IBMutableOrderedSet" key="objectRecords">
         <object class="NSArray" key="orderedObjects">
@@ -280,11 +214,8 @@
               <bool key="EncodedWithXMLCoder">YES</bool>
               <reference ref="338404575"/>
               <reference ref="967320932"/>
-              <reference ref="707172694"/>
               <reference ref="457771076"/>
-              <reference ref="153014393"/>
               <reference ref="1044492338"/>
-              <reference ref="489313539"/>
             </object>
             <reference key="parent" ref="0"/>
           </object>
@@ -305,18 +236,8 @@
             <reference key="parent" ref="191373211"/>
           </object>
           <object class="IBObjectRecord">
-            <int key="objectID">18</int>
-            <reference key="object" ref="153014393"/>
-            <reference key="parent" ref="191373211"/>
-          </object>
-          <object class="IBObjectRecord">
             <int key="objectID">27</int>
             <reference key="object" ref="338404575"/>
-            <reference key="parent" ref="191373211"/>
-          </object>
-          <object class="IBObjectRecord">
-            <int key="objectID">28</int>
-            <reference key="object" ref="707172694"/>
             <reference key="parent" ref="191373211"/>
           </object>
           <object class="IBObjectRecord">
@@ -327,11 +248,6 @@
           <object class="IBObjectRecord">
             <int key="objectID">34</int>
             <reference key="object" ref="1044492338"/>
-            <reference key="parent" ref="191373211"/>
-          </object>
-          <object class="IBObjectRecord">
-            <int key="objectID">37</int>
-            <reference key="object" ref="489313539"/>
             <reference key="parent" ref="191373211"/>
           </object>
         </object>
@@ -345,14 +261,9 @@
           <string>1.IBEditorWindowLastContentRect</string>
           <string>1.IBPluginDependency</string>
           <string>16.IBPluginDependency</string>
-          <string>18.IBPluginDependency</string>
-          <string>18.IBViewBoundsToFrameTransform</string>
           <string>27.IBPluginDependency</string>
-          <string>28.IBPluginDependency</string>
           <string>29.IBPluginDependency</string>
           <string>34.IBPluginDependency</string>
-          <string>37.IBPluginDependency</string>
-          <string>37.IBViewBoundsToFrameTransform</string>
         </object>
         <object class="NSMutableArray" key="dict.values">
           <bool key="EncodedWithXMLCoder">YES</bool>
@@ -362,17 +273,8 @@
           <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
           <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
           <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-          <object class="NSAffineTransform">
-            <bytes key="NSTransformStruct">P4AAAL+AAABCiAAAw3AAAA</bytes>
-          </object>
           <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
           <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-          <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-          <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-          <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-          <object class="NSAffineTransform">
-            <bytes key="NSTransformStruct">P4AAAL+AAABDHAAAw3YAAA</bytes>
-          </object>
         </object>
       </object>
       <object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -442,18 +344,14 @@
             <bool key="EncodedWithXMLCoder">YES</bool>
             <object class="NSArray" key="dict.sortedKeys">
               <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>todoButton</string>
               <string>todoPriority</string>
-              <string>todoStatus</string>
               <string>todoStatusSwitch</string>
               <string>todoText</string>
             </object>
             <object class="NSMutableArray" key="dict.values">
               <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>UIButton</string>
               <string>UISegmentedControl</string>
-              <string>UILabel</string>
-              <string>UISwitch</string>
+              <string>UICustomSwitch</string>
               <string>UITextField</string>
             </object>
           </object>
@@ -461,29 +359,19 @@
             <bool key="EncodedWithXMLCoder">YES</bool>
             <object class="NSArray" key="dict.sortedKeys">
               <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>todoButton</string>
               <string>todoPriority</string>
-              <string>todoStatus</string>
               <string>todoStatusSwitch</string>
               <string>todoText</string>
             </object>
             <object class="NSMutableArray" key="dict.values">
               <bool key="EncodedWithXMLCoder">YES</bool>
               <object class="IBToOneOutletInfo">
-                <string key="name">todoButton</string>
-                <string key="candidateClassName">UIButton</string>
-              </object>
-              <object class="IBToOneOutletInfo">
                 <string key="name">todoPriority</string>
                 <string key="candidateClassName">UISegmentedControl</string>
               </object>
               <object class="IBToOneOutletInfo">
-                <string key="name">todoStatus</string>
-                <string key="candidateClassName">UILabel</string>
-              </object>
-              <object class="IBToOneOutletInfo">
                 <string key="name">todoStatusSwitch</string>
-                <string key="candidateClassName">UISwitch</string>
+                <string key="candidateClassName">UICustomSwitch</string>
               </object>
               <object class="IBToOneOutletInfo">
                 <string key="name">todoText</string>
@@ -494,6 +382,14 @@
           <object class="IBClassDescriptionSource" key="sourceIdentifier">
             <string key="majorKey">IBProjectSource</string>
             <string key="minorKey">Classes/TodoViewController.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">UICustomSwitch</string>
+          <string key="superclassName">UISlider</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBProjectSource</string>
+            <string key="minorKey">Classes/UICustomSwitch.h</string>
           </object>
         </object>
       </object>
@@ -591,14 +487,6 @@
           </object>
         </object>
         <object class="IBPartialClassDescription">
-          <string key="className">UIButton</string>
-          <string key="superclassName">UIControl</string>
-          <object class="IBClassDescriptionSource" key="sourceIdentifier">
-            <string key="majorKey">IBFrameworkSource</string>
-            <string key="minorKey">UIKit.framework/Headers/UIButton.h</string>
-          </object>
-        </object>
-        <object class="IBPartialClassDescription">
           <string key="className">UIControl</string>
           <string key="superclassName">UIView</string>
           <object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -644,11 +532,11 @@
           </object>
         </object>
         <object class="IBPartialClassDescription">
-          <string key="className">UISwitch</string>
+          <string key="className">UISlider</string>
           <string key="superclassName">UIControl</string>
           <object class="IBClassDescriptionSource" key="sourceIdentifier">
             <string key="majorKey">IBFrameworkSource</string>
-            <string key="minorKey">UIKit.framework/Headers/UISwitch.h</string>
+            <string key="minorKey">UIKit.framework/Headers/UISlider.h</string>
           </object>
         </object>
         <object class="IBPartialClassDescription">
