Added in dueDate and date picker

--- a/TodoViewController.xib
+++ b/TodoViewController.xib
@@ -45,7 +45,7 @@
           <object class="IBUISegmentedControl" id="457771076">
             <reference key="NSNextResponder" ref="191373211"/>
             <int key="NSvFlags">292</int>
-            <string key="NSFrame">{{20, 161}, {286, 44}}</string>
+            <string key="NSFrame">{{20, 116}, {286, 44}}</string>
             <reference key="NSSuperview" ref="191373211"/>
             <bool key="IBUIOpaque">NO</bool>
             <bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -86,7 +86,7 @@
           <object class="IBUILabel" id="338404575">
             <reference key="NSNextResponder" ref="191373211"/>
             <int key="NSvFlags">292</int>
-            <string key="NSFrame">{{20, 127}, {74, 26}}</string>
+            <string key="NSFrame">{{20, 89}, {74, 26}}</string>
             <reference key="NSSuperview" ref="191373211"/>
             <bool key="IBUIOpaque">NO</bool>
             <bool key="IBUIClipsSubviews">YES</bool>
@@ -101,16 +101,16 @@
             <int key="IBUIBaselineAdjustment">1</int>
             <float key="IBUIMinimumFontSize">10</float>
           </object>
-          <object class="IBUILabel" id="967320932">
+          <object class="IBUILabel" id="323798250">
             <reference key="NSNextResponder" ref="191373211"/>
             <int key="NSvFlags">292</int>
-            <string key="NSFrame">{{20, 20}, {42, 21}}</string>
+            <string key="NSFrame">{{20, 167}, {74, 26}}</string>
             <reference key="NSSuperview" ref="191373211"/>
             <bool key="IBUIOpaque">NO</bool>
             <bool key="IBUIClipsSubviews">YES</bool>
             <bool key="IBUIUserInteractionEnabled">NO</bool>
             <string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-            <string key="IBUIText">Text: </string>
+            <string key="IBUIText">Due: </string>
             <reference key="IBUITextColor" ref="554936524"/>
             <nil key="IBUIHighlightedColor"/>
             <int key="IBUIBaselineAdjustment">1</int>
@@ -119,7 +119,7 @@
           <object class="IBUITextField" id="1044492338">
             <reference key="NSNextResponder" ref="191373211"/>
             <int key="NSvFlags">292</int>
-            <string key="NSFrame">{{20, 49}, {286, 31}}</string>
+            <string key="NSFrame">{{20, 20}, {286, 31}}</string>
             <reference key="NSSuperview" ref="191373211"/>
             <string key="NSReuseIdentifierKey">_NS:156</string>
             <bool key="IBUIOpaque">NO</bool>
@@ -140,6 +140,45 @@
             <object class="IBUITextInputTraits" key="IBUITextInputTraits">
               <string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
             </object>
+          </object>
+          <object class="IBUIDatePicker" id="618376854">
+            <reference key="NSNextResponder" ref="191373211"/>
+            <int key="NSvFlags">290</int>
+            <string key="NSFrame">{{0, 201}, {320, 216}}</string>
+            <reference key="NSSuperview" ref="191373211"/>
+            <string key="NSReuseIdentifierKey">_NS:669</string>
+            <string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+            <int key="IBUIContentHorizontalAlignment">0</int>
+            <int key="IBUIContentVerticalAlignment">0</int>
+            <object class="NSLocale" key="IBUILocale">
+              <string key="NS.identifier">en_US</string>
+            </object>
+            <object class="NSTimeZone" key="IBUITimeZone">
+              <string key="NS.name">America/Los_Angeles</string>
+              <object class="NSMutableData" key="NS.data">
+                <bytes key="NS.bytes">VFppZgAAAAAAAAAAAAAAAAAAAAAAAAAEAAAABAAAAAAAAAC5AAAABAAAABCepkign7sVkKCGKqChmveQ
+y4kaoNIj9HDSYSYQ1v50INiArZDa/tGg28CQENzes6DdqayQ3r6VoN+JjpDgnneg4WlwkOJ+WaDjSVKQ
+5F47oOUpNJDmR1gg5xJREOgnOiDo8jMQ6gccIOrSFRDr5v4g7LH3EO3G4CDukdkQ76/8oPBxuxDxj96g
+8n/BkPNvwKD0X6OQ9U+ioPY/hZD3L4Sg+CiiEPkPZqD6CIQQ+viDIPvoZhD82GUg/chIEP64RyD/qCoQ
+AJgpIAGIDBACeAsgA3EokARhJ6AFUQqQBkEJoAcw7JAHjUOgCRDOkAmtvyAK8LCQC+CvoAzZzRANwJGg
+DrmvEA+priAQmZEQEYmQIBJ5cxATaXIgFFlVEBVJVCAWOTcQFyk2IBgiU5AZCRggGgI1kBryNKAb4heQ
+HNIWoB3B+ZAesfigH6HbkCB2KyAhgb2QIlYNICNq2hAkNe8gJUq8ECYV0SAnKp4QJ/7toCkKgBAp3s+g
+KupiECu+saAs036QLZ6ToC6zYJAvfnWgMJNCkDFnkiAycySQM0d0IDRTBpA1J1YgNjLokDcHOCA4HAUQ
+OOcaIDn75xA6xvwgO9vJEDywGKA9u6sQPo/6oD+bjRBAb9ygQYSpkEJPvqBDZIuQRC+goEVEbZBF89Mg
+Ry2KEEfTtSBJDWwQSbOXIErtThBLnLOgTNZqkE18laBOtkyQT1x3oFCWLpBRPFmgUnYQkFMcO6BUVfKQ
+VPwdoFY11JBW5TogWB7xEFjFHCBZ/tMQWqT+IFvetRBchOAgXb6XEF5kwiBfnnkQYE3eoGGHlZBiLcCg
+Y2d3kGQNoqBlR1mQZe2EoGcnO5BnzWagaQcdkGmtSKBq5v+Qa5ZlIGzQHBBtdkcgbq/+EG9WKSBwj+AQ
+cTYLIHJvwhBzFe0gdE+kEHT/CaB2OMCQdt7roHgYopB4vs2gefiEkHqer6B72GaQfH6RoH24SJB+XnOg
+f5gqkAABAAECAwEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEA
+AQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEA
+AQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEA
+AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</bytes>
+              </object>
+            </object>
+            <object class="NSDate" key="IBUIDate">
+              <double key="NS.time">338674305.23562199</double>
+            </object>
+            <int key="IBUIMinuteInterval">5</int>
           </object>
         </object>
         <string key="NSFrameSize">{320, 480}</string>
@@ -197,6 +236,32 @@
           </object>
           <int key="connectionID">36</int>
         </object>
+        <object class="IBConnectionRecord">
+          <object class="IBCocoaTouchOutletConnection" key="connection">
+            <string key="label">datePicker</string>
+            <reference key="source" ref="372490531"/>
+            <reference key="destination" ref="618376854"/>
+          </object>
+          <int key="connectionID">42</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBCocoaTouchEventConnection" key="connection">
+            <string key="label">updateDueDate:</string>
+            <reference key="source" ref="618376854"/>
+            <reference key="destination" ref="372490531"/>
+            <int key="IBEventType">13</int>
+          </object>
+          <int key="connectionID">43</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBCocoaTouchEventConnection" key="connection">
+            <string key="label">updateDueDate:</string>
+            <reference key="source" ref="618376854"/>
+            <reference key="destination" ref="372490531"/>
+            <int key="IBEventType">7</int>
+          </object>
+          <int key="connectionID">44</int>
+        </object>
       </object>
       <object class="IBMutableOrderedSet" key="objectRecords">
         <object class="NSArray" key="orderedObjects">
@@ -212,10 +277,11 @@
             <reference key="object" ref="191373211"/>
             <object class="NSMutableArray" key="children">
               <bool key="EncodedWithXMLCoder">YES</bool>
-              <reference ref="338404575"/>
-              <reference ref="967320932"/>
-              <reference ref="457771076"/>
               <reference ref="1044492338"/>
+              <reference ref="457771076"/>
+              <reference ref="338404575"/>
+              <reference ref="323798250"/>
+              <reference ref="618376854"/>
             </object>
             <reference key="parent" ref="0"/>
           </object>
@@ -241,13 +307,18 @@
             <reference key="parent" ref="191373211"/>
           </object>
           <object class="IBObjectRecord">
-            <int key="objectID">29</int>
-            <reference key="object" ref="967320932"/>
+            <int key="objectID">34</int>
+            <reference key="object" ref="1044492338"/>
             <reference key="parent" ref="191373211"/>
           </object>
           <object class="IBObjectRecord">
-            <int key="objectID">34</int>
-            <reference key="object" ref="1044492338"/>
+            <int key="objectID">40</int>
+            <reference key="object" ref="618376854"/>
+            <reference key="parent" ref="191373211"/>
+          </object>
+          <object class="IBObjectRecord">
+            <int key="objectID">41</int>
+            <reference key="object" ref="323798250"/>
             <reference key="parent" ref="191373211"/>
           </object>
         </object>
@@ -261,9 +332,14 @@
           <string>1.IBEditorWindowLastContentRect</string>
           <string>1.IBPluginDependency</string>
           <string>16.IBPluginDependency</string>
+          <string>16.IBViewBoundsToFrameTransform</string>
           <string>27.IBPluginDependency</string>
-          <string>29.IBPluginDependency</string>
+          <string>27.IBViewBoundsToFrameTransform</string>
           <string>34.IBPluginDependency</string>
+          <string>40.IBPluginDependency</string>
+          <string>40.IBViewBoundsToFrameTransform</string>
+          <string>41.IBPluginDependency</string>
+          <string>41.IBViewBoundsToFrameTransform</string>
         </object>
         <object class="NSMutableArray" key="dict.values">
           <bool key="EncodedWithXMLCoder">YES</bool>
@@ -272,9 +348,22 @@
           <string>{{380, 269}, {320, 480}}</string>
           <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
           <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+          <object class="NSAffineTransform">
+            <bytes key="NSTransformStruct">P4AAAL+AAABBoAAAwzMAAA</bytes>
+          </object>
+          <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+          <object class="NSAffineTransform">
+            <bytes key="NSTransformStruct">P4AAAL+AAABBoAAAwwYAAA</bytes>
+          </object>
           <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
           <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+          <object class="NSAffineTransform">
+            <bytes key="NSTransformStruct">P4AAAL+AAAAAAAAAw8+AAA</bytes>
+          </object>
           <string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+          <object class="NSAffineTransform">
+            <bytes key="NSTransformStruct">P4AAAL+AAABBoAAAwzQAAA</bytes>
+          </object>
         </object>
       </object>
       <object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -293,7 +382,7 @@
         </object>
       </object>
       <nil key="sourceID"/>
-      <int key="maxID">39</int>
+      <int key="maxID">44</int>
     </object>
     <object class="IBClassDescriber" key="IBDocument.Classes">
       <object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -305,12 +394,14 @@
             <bool key="EncodedWithXMLCoder">YES</bool>
             <object class="NSArray" key="dict.sortedKeys">
               <bool key="EncodedWithXMLCoder">YES</bool>
+              <string>updateDueDate:</string>
               <string>updatePriority:</string>
               <string>updateStatus:</string>
               <string>updateText:</string>
             </object>
             <object class="NSMutableArray" key="dict.values">
               <bool key="EncodedWithXMLCoder">YES</bool>
+              <string>id</string>
               <string>id</string>
               <string>id</string>
               <string>id</string>
@@ -320,12 +411,17 @@
             <bool key="EncodedWithXMLCoder">YES</bool>
             <object class="NSArray" key="dict.sortedKeys">
               <bool key="EncodedWithXMLCoder">YES</bool>
+              <string>updateDueDate:</string>
               <string>updatePriority:</string>
               <string>updateStatus:</string>
               <string>updateText:</string>
             </object>
             <object class="NSMutableArray" key="dict.values">
               <bool key="EncodedWithXMLCoder">YES</bool>
+              <object class="IBActionInfo">
+                <string key="name">updateDueDate:</string>
+                <string key="candidateClassName">id</string>
+              </object>
               <object class="IBActionInfo">
                 <string key="name">updatePriority:</string>
                 <string key="candidateClassName">id</string>
@@ -344,12 +440,14 @@
             <bool key="EncodedWithXMLCoder">YES</bool>
             <object class="NSArray" key="dict.sortedKeys">
               <bool key="EncodedWithXMLCoder">YES</bool>
+              <string>datePicker</string>
               <string>todoPriority</string>
               <string>todoStatusSwitch</string>
               <string>todoText</string>
             </object>
             <object class="NSMutableArray" key="dict.values">
               <bool key="EncodedWithXMLCoder">YES</bool>
+              <string>UIDatePicker</string>
               <string>UISegmentedControl</string>
               <string>UICustomSwitch</string>
               <string>UITextField</string>
@@ -359,12 +457,17 @@
             <bool key="EncodedWithXMLCoder">YES</bool>
             <object class="NSArray" key="dict.sortedKeys">
               <bool key="EncodedWithXMLCoder">YES</bool>
+              <string>datePicker</string>
               <string>todoPriority</string>
               <string>todoStatusSwitch</string>
               <string>todoText</string>
             </object>
             <object class="NSMutableArray" key="dict.values">
               <bool key="EncodedWithXMLCoder">YES</bool>
+              <object class="IBToOneOutletInfo">
+                <string key="name">datePicker</string>
+                <string key="candidateClassName">UIDatePicker</string>
+              </object>
               <object class="IBToOneOutletInfo">
                 <string key="name">todoPriority</string>
                 <string key="candidateClassName">UISegmentedControl</string>
@@ -492,6 +595,14 @@
           <object class="IBClassDescriptionSource" key="sourceIdentifier">
             <string key="majorKey">IBFrameworkSource</string>
             <string key="minorKey">UIKit.framework/Headers/UIControl.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">UIDatePicker</string>
+          <string key="superclassName">UIControl</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBFrameworkSource</string>
+            <string key="minorKey">UIKit.framework/Headers/UIDatePicker.h</string>
           </object>
         </object>
         <object class="IBPartialClassDescription">
